# EduNexus

./: .dockerignore  .gitignore  Dockerfile  README.md  api.py  main.py  mcp_bridge.py  pyproject.toml
.github/workflows/: ci.yml  terraform.yml
graph/: state.py
infra/: main.tf
k8s/: deployment.yaml  ingress.yaml  service.yaml
mcp_server/: server.py
